// Jest Snapshot v1, https://goo.gl/fbAQLP

exports['Logs matches the snapshot 1'] = `
<div
  className="h-100"
>
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-primary sticky-top py-1"
  >
    <div
      className="mr-auto font-weight-bold text-center text-white"
    >
      server1
       logs
    </div>
    <button
      className="btn btn-primary"
      onClick={[Function]}
      title="Clear logs"
    >
      <i
        className="fas fa-eraser"
      />
    </button>
  </nav>
  <pre
    className="logs-window"
  />
</div>
`;

exports['Logs updates the state of logs: with logs 1'] = `
<div
  className="h-100"
>
  <nav
    className="navbar navbar-expand-lg navbar-dark bg-primary sticky-top py-1"
  >
    <div
      className="mr-auto font-weight-bold text-center text-white"
    >
      server1
       logs
    </div>
    <button
      className="btn btn-primary"
      onClick={[Function]}
      title="Clear logs"
    >
      <i
        className="fas fa-eraser"
      />
    </button>
  </nav>
  <pre
    className="logs-window"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "log output",
        }
      }
    />
  </pre>
</div>
`;
